--- a/style.css
+++ b/style.css
@@ -78,9 +78,55 @@ body {
   z-index: 3;
   padding-right: 60px;
   position: relative;
-  top: 10px;
+  top: 7px;
   margin-left: 70px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+/* BOTTOM BAR STYLES */
+.bottom-bar {
+  height: 41px;
+  background: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 69px;
+  left: -8px;
+  width: 593px;
+  clip-path: polygon(8px 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.bottom-bar-text {
+  color: white;
+  font-weight: 600;
+  font-size: 26px;
+  z-index: 3;
+  padding-right: 60px;
+  position: relative;
+  top: 4px;
+  margin-left: 80px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* TOP BAR STYLES */
+.top-bar {
+  width: max-content;
+  height: 41px;
+  background: rgba(243, 249, 255, 0.9);
+  position: absolute;
+  top: -40px;
+  left: 23px;
+  clip-path: polygon(8px 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.top-bar-text {
+  color: #333;
+  font-weight: 600;
+  font-size: 26px;
+  position: relative;
+  top: 3px;
+  margin-left: 48px;
+  padding-right: 30px;
 }
