--- a/style.css
+++ b/style.css
@@ -93,9 +93,11 @@ body {
   height: 41px;
   background: rgba(0, 0, 0, 0.9);
   position: absolute;
-  top: 69px;
+  top: 0;
   left: -8px;
+  opacity: 0;
   clip-path: polygon(8px 0, 100% 0, 100% 100%, 0% 100%);
+  animation: slideDownBottom 0.6s ease-in-out forwards 0.2s; 
 }
 
 .bottom-bar-text {
@@ -118,9 +120,11 @@ body {
   height: 41px;
   background: rgba(243, 249, 255, 0.9);
   position: absolute;
-  top: -40px;
+  top: 0;
   left: 23px;
+  opacity: 0;
   clip-path: polygon(8px 0, 100% 0, 100% 100%, 0% 100%);
+  animation: slideUpTop 0.5s ease-in forwards 0.2s;
 }
 
 .top-bar-text {
@@ -155,6 +159,86 @@ body {
     clip-path: polygon(0 0, 0 0, 0% 100%, 0% 100%);
   }
 }
+
+/* BOTTOM BAR ======= */
+/* ANIMATE IN */
+@keyframes slideDownBottom {
+  0% {
+    top: 0;
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  55% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+    top: 69px;
+  }
+}
+
+/* ANIMATE OUT */
+@keyframes slideUpBottom {
+  0% {
+    top: 69px;
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+    top: 0;
+  }
+}
+
+/* TOP BAR ======= */
+/* ANIMATE IN */
+@keyframes slideUpTop {
+  0% {
+    top: 0;
+    opacity: 0;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+    top: -40px;
+  }
+}
+
+/* ANIMATE OUT */
+@keyframes slideDownTop {
+  0% {
+    top: -40px;
+    opacity: 1;
+  }
+
+  98% {
+    opacity: 1;
+  }
+
+  99% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+    top: 0;
+  }
+}
+
+
 
 /* LEFT BOX ======= */
 /* ANIMATE IN */
